2007-08-10  Lars Clausen  <lars@raeder.dk>

	* app/object_ops.c (object_list_align_v): Symmetry between vert
	and horiz alignment functions.  Probably fixes bug #442054.

	* app/interface.c (create_sheets): Use a slightly more useful
	sheet as default selection.  Fixes bug #442309.

	* sheets/Lights.sheet.in: Patch from Elie Roux
	(elie.roux@enst-bretagne.fr) fixes some wrong shape names.

	* app/menus.c (menus_clear_recent): Don't assert non-critical
	things, just put appropriate ifs around them.

	* app/create_object.c (create_object_button_release): Update menus
	after creating an object.

2007-08-09  Steffen Macke <sdteffen@gmail.com>

	* installer/win32/dia.nsi: Added Lights shapes and sheet

2007-08-09  Lars Clausen  <lars@raeder.dk>

	* doc/fr/graphics/*: Updated with french versions where needed.
	Last fix from Thomas Harding <thomas.harding@laposte.net>, closing
	bug #427552.
	
	* lib/element.h (ELEMENT_COMMON_PROPERTIES): Use
	PROP_FLAG_NO_DEFAULTS on element widths -- gives strange caching
	behaviour for shapes.

	* objects/ER/entity.c: Add PROP_FLAG_NO_DEFAULTS to make possible
	to set "weak" attribute from intdata.

	* shapes/Lights/*: Changed hardcoded B&W to foreground/background.

	* doc/en/usage-customization.xml: Fixed wrong image filename.

	* doc/fr/hardcopies.makefile: Clean-up of some spaces.

	* doc/en/usage-objects-basic.xml: Added some more detail on how to
	use the text object.  Fixes bug #455400.

	* objects/FS/flow.c: Added undo support, fixing bug #456419.

	* objects/SISSI/sissi_object.c (sissi_object_create): Fixed
	formatting and took things that should always be run outside of
	the if.  Fixes bug #463700.

	* objects/SISSI/sissi.h: Removed double newlines and fixed some
	formatting. 

	* shapes/Lights/*:
	* sheets/Lights.sheet.in:
	* sheets/Makefile.am (sheet_in_files): New shape set for lighting
	arrangements from Elie Roux (elie.roux@enst-bretagne.fr).  Needs a
	little fixing of colors, but otherwise fine.
